[gd_scene load_steps=3 format=3 uid="uid://dj7utvhx2i1r6"]

[ext_resource type="Script" uid="uid://dswlo6k08gp02" path="res://scenes/game_scene/goals_mini_panel.gd" id="1_wds8u"]
[ext_resource type="PackedScene" uid="uid://xf0awe3j8qd8" path="res://scenes/game_scene/goal_row.tscn" id="2_vvaww"]

[node name="GoalsMiniPanel" type="PanelContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -1.0
offset_right = 2.0
offset_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_wds8u")
delivered_list = null

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Delivery Goals"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GoalsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GoalRow" parent="." instance=ExtResource("2_vvaww")]
visible = false
layout_mode = 2
